# dupwalker

./: .gitignore  Cargo.toml  NOTES.md  README.md
app/: Cargo.toml  Trunk.toml  index.html
app/src/: lib.rs  main.rs
app/src/bulma/: navbar.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/engine/: api.rs  file_walker.rs  image_loader.rs  mod.rs  status_mgr.rs
server/src/engine/dupfinder/: mod.rs
server/src/engine/hasher/: ahasher.rs  dhasher.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: engine.rs  lib.rs  main.rs
src/engine/: file_walker.rs  mod.rs  status_mgr.rs
src/engine/hasher/: ahasher.rs  dhasher.rs  fake_hasher.rs  mod.rs
